    * `programcall`
    	* bug fixes
    * `splfol`
        * bug fixes
        * rendering
* Examples
    * `endJobName.ublu` ends first instance of a job by name
* Extensions
    * `ux.string.ublu`
    * `ux.printobj.ublu`
        * extended with functions for spooled files
    * `ux.user.ublu`
        * prints iASP list
* Test Suite
        * `calljava`
	* `programcall`
* Miscellaneous
    * Cleanup README.md
    * More work on docs
    	* SSL info
    	* Various
    * Begin Atom editor language-ublu support

1.1.9 2017-12-12
-----
* System
    * All dependencies on JTOpenLite removed and that jar removed.
    * -v invocation shows version and exits.
    * PostgreSQL driver 42.1.4
    * Remove 1.8-isms for builds under Java 1.7.
    * Announces Java version.
* Commands
    * `cs` Remove 1.8-isms
    * `db` accepts `-as400`
    * `jrnl` Removed this command for its dependency on JTOpenLite
        * Its functionality can be surpassed by Ublu code using Db2 for i Services
    * `monitor` Removed `-diststatus` which is broken in JTOpenLite
    * `num` Remove 1.8-ism
    * `splfol` spooled file open list api
    * `subsys` command now populates subsystem attributes with a refresh (https://github.com/jwoehr/ublu/issues/19)
* Extensions
    * `ux.qsys2.journal.ublu` journal methods from db2 services
    * `ux.serialize.ublu` Java serialization utilities
    * `ux.sfli.ublu` call on the com.ibm.as400.access.list.SpooledFileListItem
* Testing
    * Test suite now runs on Android
        * t.subsys
* Windowing
    * command-line recall better
    * remove 1.8-isms

1.1.8 2017-09-27
-----
* System
    * JTOpen 9.4
    * Fixed bug in function argument token pasting ... a tuple in the list
      with a longer name than a previous element in the list where the prev
      element was a substring of the longer name got clobbered by the regex.
    * string parsing now assimilates a block as well as a quotation
    * better Goublu support
    * some optimizations
* Documentation